force-app/main/default/objects/Portal_Toggles__c/Portal_Toggles__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Portal Toggles</label>
</CustomObject>