force-app/main/default/objects/Portal_Toggles__c/fields/Ask_A_Question_Email__c.field-meta.xml
<CustomField>
    <fullName>Ask_A_Question_Email__c</fullName>
    <inlineHelpText>This field is used to store email for Ask a Question</inlineHelpText>
    <label>Ask A Question Email</label>
    <type>Email</type>
</CustomField>