force-app/main/default/objects/Portal_Toggles__c/fields/GPU_Genius_Training_Email__c.field-meta.xml
<CustomField>
    <fullName>GPU_Genius_Training_Email__c</fullName>
    <label>GPU Genius Training Email</label>
    <type>Email</type>
</CustomField>