force-app/main/default/objects/Portal_Toggles__c/fields/Log_A_Support_Request_Email__c.field-meta.xml
<CustomField>
    <fullName>Log_A_Support_Request_Email__c</fullName>
    <inlineHelpText>This field is used to store email for Log A Support Request</inlineHelpText>
    <label>Log A Support Request Email</label>
    <type>Email</type>
</CustomField>