force-app/main/default/objects/Portal_Toggles__c/fields/Toggle_Description__c.field-meta.xml
<CustomField>
    <fullName>Toggle_Description__c</fullName>
    <inlineHelpText>This will be a short description of each competency</inlineHelpText>
    <label>Toggle Description</label>
    <type>TextArea</type>
</CustomField>